# SafeIdea_Rover

./: .gitignore  README.md  hotspot.sh  zakupy.txt
CurcuitDiagrams/: MotorSpeed.cir
PCBBoards/: demux.brd  demux.cam  demux.pro  demux.sch  eagle.epf  motorspeed.b#1  motorspeed.b#2  motorspeed.b#3  motorspeed.brd  motorspeed.pro  motorspeed.s#1  motorspeed.s#2  motorspeed.sch
Sensoryka/IMU - program/: sketch_apr06a.ino
Sensoryka/gps/: gps.ino
gazebo_anim/: animated_box.world
rover_gazebo/: CMakeLists.txt  package.xml
rover_gazebo/config/: config.yaml
rover_gazebo/launch/: diff.launch  gazebo.launch  view_demo.launch
rover_gazebo/models/heightmap/: model.config  model.sdf  model.urdf
rover_gazebo/models/rover/: model.config  model.sdf  rover.urdf  rover2.urdf  test.urdf
rover_gazebo/models/rover/3dmodels/: platforma_kolo_lewe1.dae  platforma_kolo_lewe2.dae  platforma_kolo_lewe3.dae  platforma_kolo_prawe1.dae  platforma_kolo_prawe2.dae  platforma_kolo_prawe3.dae  platforma_lewe_dwa.dae  platforma_nieruchome.dae  platforma_prawe_dwa.dae
rover_gazebo/models/sphere/: sphere.urdf
rover_gazebo/src/: animated_box.cc  world_plugin.cpp
rover_gazebo/worlds/: mars.world
rover_msg/: CMakeLists.txt  package.xml
rover_msg/msg/: Controller.msg  Keyboard.msg  Master_Motor.msg  PC2Rasp.msg  Sensor.msg
rover_safeidea/: CMakeLists.txt  package.xml  package.xml.save
rover_safeidea/launch/: freq.launch  motor.launch  rover.launch
rover_safeidea/src/: beacon_scenario.py  beacon_scenario2.py  demo_pwm.py  enumerate.py  freq.py  generate_sensors.py  keyboard.py  (+6 more)
